<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:paddingTop="50dp"
        android:id="@+id/appName"
        android:textAlignment="center"
        android:background="#0099cc"
        android:textColor="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonbg_gradient"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:text="@string/temperature_map"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonbg_gradient"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:text="@string/forecast"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonbg_gradient"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:text="@string/json_request"
            android:id="@+id/btnArrayRequest"
            android:textColor="#ffffff"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttonbg_gradient"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:text="@string/login"
            android:id="@+id/login"
            android:textColor="#ffffff"/>
        <!--<menu>
            <item
                android:id="@+id/change_city"
                android:orderInCategory="1"
                android:title="@string/change_city"
                app:showAsAction="never"/>
        </menu>-->


    </LinearLayout>

    <FrameLayout
        android:id="@+id/container_frame_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtResponse"
            android:layout_marginTop="40dp"
            android:padding="20dp"/>

    </FrameLayout>
</LinearLayout>