<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@color/secondaryColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_above="@+id/titleBox"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleBox"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="72sp"
            android:textColor="@color/secondaryTextColor"
            android:id="@+id/title"
            android:padding="4dp"
            android:textAlignment="center"/>
        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/titleBox"
            android:id="@+id/spacer"/>
        <LinearLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_below="@+id/spacer">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/email"
                android:textColor="@color/secondaryTextColor"
                android:padding="5dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:background="@color/secondaryLightColor"
                android:text="@string/email"
                android:textColor="@color/secondaryTextColor"
                android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:id="@+id/password">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/password"
                android:textColor="@color/secondaryTextColor"
                android:padding="5dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:background="@color/secondaryLightColor"
                android:textColor="@color/secondaryTextColor"
                android:text="@string/password"
                android:padding="5dp"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:background="@color/secondaryLightColor"
            android:layout_marginTop="10dp"
            android:textColor="@color/secondaryTextColor"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:padding="1dp"
                android:layout_marginEnd="1dp"
                android:textColor="@color/secondaryTextColor"
                android:background="@color/secondaryLightColor"
                android:id="@+id/signupBtn"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:padding="10dp"
                android:layout_marginEnd="1dp"
                android:textColor="@color/secondaryTextColor"
                android:background="@color/secondaryLightColor"/>

        </LinearLayout>


    </RelativeLayout>
</FrameLayout>