<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForecastFragment"
    android:id="@+id/forecastfragment">

    <!--<fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/forecastfragment">

        Had this in originally but came to find out that once I had finally built and tried to run the program
        that it would crash when trying to load this fragment-->

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:background="@drawable/forecast_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainContainer"
            android:visibility="visible">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/addressContainer"
                android:gravity="center"
                android:background="#3CF1EBF1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/city_field"
                    android:textAppearance= "?android:textAppearanceLarge"
                    android:gravity="center"
                    android:textColor="#ffffff"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/updated_field"
                    android:textSize="13sp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="70sp"
                android:id="@+id/weather_icon"
                android:text="@string/weather_sunny"
                android:textColor="#ffffff"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/overviewContainer"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:layout_below="@+id/weather_icon">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/current_temperature"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textSize="40sp"
                    android:text="@string/_29c"
                    android:layout_gravity="center"
                    android:textColor="#ffffff"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/detailsContainer"
                android:layout_alignParentBottom="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:background="#3CF1EBF1"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_pressure"
                            android:tint="#FFFFFF"
                            android:contentDescription="@string/pressure"/>
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="@string/pressure"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="@string/_1050_4_h"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/pressure"
                            android:textSize="16sp"
                            android:text="@string/_06_40_am"/>
                    </LinearLayout>
                    <Space
                        android:layout_width="10sp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:gravity="center"
                        android:background="#3CF1EBF1">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_action_name"
                            android:tint="#FFFFFF"
                            android:contentDescription="@string/humidity"/>
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="@string/humidity"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="@string/_78"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/humidity"
                            android:textSize="16sp"
                            android:text="@string/_06_40_am"/>
                    </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:background="#3CF1EBF1">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/ic_info"
                            android:tint="#FFFFFF"
                            android:contentDescription="@string/information"/>
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:text="@string/created_by"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/about"
                            android:textSize="15sp"
                            android:text="@string/thomas"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:text="@string/jago"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loader"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/errorText"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:text="@string/something_went_wrong"/>
    </RelativeLayout>


    <!--</fragment>-->
</FrameLayout>